# hafiz-assistant-backend

./: .gitignore  ANDROID_DEPLOYMENT_SUCCESS.md  ANDROID_INTEGRATION_GUIDE.md  BUILD_GUIDE.md  Cargo.toml  FLUTTER_INTEGRATION_GUIDE.md  FLUTTER_READY.md  INTERACTIVE_PAGE_VIEWER.md  METADATA_EXTRACTION_COMPLETION_REPORT.md  Makefile  Makefile.toml  PROJECT_COMPLETION_SUMMARY.md  PROJECT_FINAL_REPORT.md  PROJECT_STRUCTURE_FINAL.md  QUICK_START.md  QUICK_START_GUIDE.md  README.md  analyze_data.py  analyze_database_tables.py  analyze_matching_ayah.py  analyze_page_data.py  analyze_page_data_deep.py  analyze_surah.py  analyze_word_mapping.py  build_and_run.bat  debug_data.py  debug_similarity.py  debug_translation.py  final_test.py  run_flutter.bat  run_flutter.ps1  rust-project.json  test_bidirectional_search.py  test_loading.py  test_real_data.py
.cargo/: config.toml
data/: ayah-themes.db.json  qpc-v2-15-lines.db.json  quran-metadata-surah-name.json  surah-info-id.json  transliteration-simple.json
data/all_data/: topics.db.json
data/pending.json/: pending.json
docs/: CLEANUP_COMPLETION_REPORT.md  FFI_REFERENCE.md  FLUTTER_IMPLEMENTATION_COMPLETE.md  FLUTTER_INTEGRATION.md  INTERACTIVE_PAGE_VIEWER_COMPLETION.md  README.md  RESTRUCTURING_COMPLETION_REPORT.md
examples/: flutter_integration_complete.dart  test_metadata.rs
examples/hafiz_assistant_flutter/: INTEGRATION_COMPLETE.md  README.md  pubspec.yaml
examples/hafiz_assistant_flutter/android/app/: build.gradle.kts
examples/hafiz_assistant_flutter/android/app/src/main/: AndroidManifest.xml
examples/hafiz_assistant_flutter/android/app/src/main/kotlin/com/example/hafiz_assistant_flutter/: MainActivity.kt
examples/hafiz_assistant_flutter/lib/: main.dart
examples/hafiz_assistant_flutter/lib/ffi/: ffi_helper.dart  ffi_helper_corrected.dart  hafiz_assistant_ffi.dart  hafiz_assistant_ffi_corrected.dart
examples/hafiz_assistant_flutter/lib/models/: ayah_data.dart  quran_statistics.dart  surah_info.dart
examples/hafiz_assistant_flutter/lib/screens/: home_screen.dart  search_screen.dart  statistics_screen.dart  surah_list_screen.dart
examples/hafiz_assistant_flutter/lib/services/: hafiz_assistant_service_new.dart
examples/hafiz_assistant_flutter/lib/widgets/: ayah_card.dart  surah_card.dart
examples/hafiz_assistant_flutter/test/: widget_test.dart
quran-id-simple.json/: quran-id-simple.json
scripts/: build_android.bat  build_android.sh  build_android_simple.bat  copy_to_external_flutter.bat
src/: lib.rs  main.rs
src/core/: mod.rs  processing.rs  search.rs
src/data/: bundle.rs  embedded.rs  loader.rs  mod.rs  structures.rs
src/ffi/: functions.rs  globals.rs  mod.rs  structures.rs
src/utils/: mod.rs  text.rs
tests/: metadata_test.rs
word-root.db/: word-root.db
