[package]
name = "hafiz_assistant_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"
serde_json = "1.0"
# Untuk membaca file .db.json yang sebenarnya adalah JSON dengan struktur tabel
# Kita akan memparsingnya secara manual karena bukan SQLite asli
# Jika Anda berencana menggunakan SQLite asli di Rust, Anda akan butuh rusqlite
# rusqlite = { version = "0.29", features = ["bundled"] } # Contoh jika pakai SQLite asli
